design-principles-02/src/main/java/com/farhad/example/design_principles02/parallel_inheritance_hierarchies/bad/MileStone.java
package com.farhad.example.design_principles02.parallel_inheritance_hierarchies.bad;

public interface MileStone {

	String work();

	String target();
}
